--- a/tic.html
+++ b/tic.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 <button id="newgame">New Game</button>
-<button id="resetbutton">Reset Button</button>
+<button id="resetbutton">Reset</button>
 <script src="tic.js"></script>
 </body>
 </html>
