html added toggle button

--- a/tic.html
+++ b/tic.html
@@ -21,6 +21,11 @@
         <button id="0" class="box"></button>
     </div>
 </div>
+<label class="toggle" id="toggle">
+    <input type="checkbox" class="toggle-input">
+    <span class="toggle-label">Mutiplayer</span>
+    <span class="toggle-handle"></span>
+</label>
 <button id="newgame">New Game</button>
 <button id="resetbutton">Reset</button>
 <script src="tic.js"></script>
